fix: progress bar z-index

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -493,4 +493,5 @@ footer.footer {
   height: 0.4rem;
   background: $color-primary;
   transform-origin: 0%;
+  z-index: 999;
 }
